--- a/centos/mariadb/Dockerfile
+++ b/centos/mariadb/Dockerfile
@@ -1,5 +1,5 @@
 FROM os/centos:latest
-MAINTAINER "Fendy Heryanto" <fendy3002@yahoo.com>
+MAINTAINER "Fendy Heryanto" <fendy3002@gmail.com>
 
 ADD ./src/mariadb.repo /etc/yum.repos.d/mariadb.repo
 RUN yum -y install MariaDB-server MariaDB-client
