--- a/centos/node/Dockerfile
+++ b/centos/node/Dockerfile
@@ -6,21 +6,24 @@ RUN curl --silent --location https://rpm.nodesource.com/setup_6.x | bash -;\
     yum -y install nodejs;\
     yum -y install gcc-c++ make;\
     npm install --global gulp-cli;\
-    npm install bower -g;
+    npm install --global supervisor;\
+    npm install --global nodemon;\
+    npm install bower --global;
 
 #supervisor
 RUN yum install -y supervisor
-RUN mkdir /etc/supervisor.d\
-    mkdir -p /home/storage/log\
-    unlink /tmp/supervisor.sock
+RUN mkdir /etc/supervisor.d;\
+    mkdir -p /storage/log/supervisor;
+
+ADD ./src/supervisord.conf /etc/supervisord.conf
+ADD ./src/supervisor.d/npm.conf /etc/supervisor.d/npm.conf
 
 WORKDIR "~"
 
-EXPOSE 80
+EXPOSE 80 22
 
-VOLUME ["/storage"]
-VOLUME ["/media"]
-VOLUME ["/app"]
+VOLUME ["/root/.ssh",\
+    "/storage",\
+    "/var/www/html"]
 
-WORKDIR "/app"
-CMD ["/usr/bin/npm", "start"]
+CMD ["/usr/bin/supervisord", "-n"]
