--- a/centos/node/src/supervisor.d/npm.conf
+++ b/centos/node/src/supervisor.d/npm.conf
@@ -1,6 +1,6 @@
 [program:nginx]
-command=/usr/sbin/nginx
+command=/usr/bin/npm start
+directory=/var/www/html
 autostart=true
 autorestart=false
 numprocs=1
-priority=1
