--- a/centos/mariadb/src/my.cnf
+++ b/centos/mariadb/src/my.cnf
@@ -42,8 +42,8 @@ max_allowed_packet = 256M
 myisam_sort_buffer_size = 256M
 sort_buffer_size = 256M
 max_statement_time = 1800
-character-set-server = utf8
-collation-server = utf8_general_ci
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
 
 # This group is only read by MariaDB-10.1 servers.
 # If you use the same .cnf file for MariaDB of different versions,
