--- a/centos/node/src/supervisor.d/npm.conf
+++ b/centos/node/src/supervisor.d/npm.conf
@@ -1,6 +1,10 @@
 [program:nginx]
+process_name=%(program_name)s_%(process_num)02d
 command=/usr/bin/npm start
 directory=/var/www/html
 autostart=true
-autorestart=false
+autorestart=true
 numprocs=1
+redirect_stderr=true
+stdout_logfile=/storage/log/supervisor/%(ENV_APP_NAME)s_queue_error.log
+stdout_logfile_maxbytes=0
